# Python-Algorithms

./: .gitignore  404.html  README.md  dev-requirements.txt  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test_req.txt
.github/workflows/: python-package.yml
docs/: index.md
docs/sorting/: index.md
python_algorithms/: __init__.py
python_algorithms/basic_python_recreations/: __init__.py  my_list.py
python_algorithms/data_structure/: __init__.py  heap.py
python_algorithms/search/: binary_search.py
python_algorithms/sorting/: __init__.py  bubble_sort.py  builtin_sort.py  insertion_sort.py  merge_sort.py  selection_sort.py  util.py
search/: search_index.json
sorting/: index.html
sorting/bubble/: index.html
sorting_algorithms/: __init__.py  bubble_sort.py  builtin_sort.py  insertion_sort.py  merge_sort.py  selection_sort.py  util.py
test/: __init__.py  test_bubble_sort.py  test_builtin_sort.py  test_insertion_sort.py  test_merge_sort.py  test_selection_sort.py  test_util.py
test/basic_python_recreations/: __init__.py  conftest.py  test_my_list.py
test/sorting_algorithms/: conftest.py  test_bubble_sort.py  test_builtin_sort.py  test_insertion_sort.py  test_merge_sort.py  test_selection_sort.py  test_util.py
