[tool.poetry]
name = "sorting-algorithms"
version = "0.2.1"
description = "Self scripted sorting algorithms in python"
authors = ["ozy-viking <zthankin@gmail.com>"]
readme = "README.md"
packages = [{include = "sorting_algorithms"}]

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
coverage = "^7.0.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
mypy = "^0.991"
pytest-cov = "^4.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=sorting_algorithms"
testpaths = ["test",]
