[tool.poetry]
name = "python-algorithms"
version = "1.0.0"
description = "Self scripted algorithms in python"
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_algorithms" }]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "~22.12"
pytest = "~7.2"
mypy = "~0.991"
pytest-cov = "~4.0"
coverage = "~7.0.3"
tox = "~4.2.6"
pylint = "^2.15.10"
autopep8 = "^2.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=python_algorithms"
testpaths = ["test", ]

[tool.mypy]
mypy_path = "python_algorithms"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
