[metadata]
name = python-algorithms
description = Self scripted algorithms in python
author = Zack Hankin <zthankin@gmail.com>
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    python-algorithms
install_requires =
    requests>=2
    icecream>=2.1.3
python_requires = >=3.10
package_dir =
    =python_algorithms
zip_safe = no

[options.extras_require]
testing =
    black>=22.12.0
    pytest>=7.2.0
    mypy>=0.991
    pytest-cov>=4.0
    coverage>=7.0.3
    tox>=4.2

[options.package_data]
python-algorithms = py.typed

[flake8]
max-line-length = 160
